name:                yesod-util
version:             0.0.0

license:             MIT
license-file:        LICENSE
author:              Vladimir Pankov
maintainer:          wowofbob@gmail.com
copyright:           Copyright (C) 2017 Vladimir Pankov
homepage:            https://github.com/wowofbob/yesod-util
bug-reports:         https://github.com/wowofbob/yesod-util/issues
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Handler.Answer 
                   , Handler.Util
    
  build-depends:     base >=4.6 && < 4.10
                   , aeson
                   , classy-prelude-yesod
                   , mtl
                   , yesod-auth
                   , text
                                        
  hs-source-dirs:      src
  include-dirs:        src
  default-language:    Haskell2010
  ghc-options:         -Wall
